<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:background="@drawable/fondo"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/salir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:text="Regresar"
            android:textColor="#ffffff"
            android:layout_marginRight="20dp"
            android:layout_gravity="center"
            android:background="@drawable/boton3"
            android:fontFamily="@font/cabin"
            android:onClick="RegresarMenu" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_gravity="center"
        android:fontFamily="@font/bungeeinline"
        android:text="Centro de ayuda"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="#fc7121"
        android:textSize="40sp"/>
        <ScrollView
            android:layout_width="370dp"
            android:layout_height="400dp"
            android:layout_gravity="center"
            android:paddingVertical="10dp"
            android:background="@drawable/subpantalla3">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColor="#000"
                android:textAlignment="center"
                android:text="Privacidad y Seguridad"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColor="#000"
                android:textAlignment="center"
                android:text="@string/privacidad" />
            <View android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="#6EC487" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColor="#000"
                android:textAlignment="center"
                android:text="Puntuación y Ranking"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColor="#000"
                android:textAlignment="center"
                android:text="@string/ranking"
                />
            <View android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="#6EC487" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColor="#000"
                android:textAlignment="center"
                android:text="Como avanzo en el juego"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColor="#000"
                android:textAlignment="center"
                android:text="@string/juego" />
            <View android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="#6EC487" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColor="#000"
                android:textAlignment="center"
                android:text="Las preguntas no cargan"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColor="#000"
                android:textAlignment="center"
                android:text="@string/preguntas"
                />
            <View android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="#6EC487" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColor="#000"
                android:textAlignment="center"
                android:text="No puedo crear una cuenta"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColor="#000"
                android:textAlignment="center"
                android:text="@string/cuenta"
                />

        </LinearLayout>
        </ScrollView>
    </LinearLayout>
</ScrollView>

