<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/fondo"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/salir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:text="Regresar"
                android:textColor="#ffffff"
                android:layout_marginRight="20dp"
                android:layout_gravity="center"
                android:background="@drawable/boton3"
                android:fontFamily="@font/cabin"
                android:onClick="RegresarMenu" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="76dp"
            android:layout_gravity="center"
            android:fontFamily="@font/bungeeinline"
            android:text="Lección 1"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textColor="#fc7121"
            android:textSize="40sp" />

        <ScrollView
            android:layout_width="370dp"
            android:layout_height="500dp"
            android:layout_gravity="center"
            android:paddingVertical="10dp"
            android:background="@drawable/subpantalla3">
            <LinearLayout
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cabin"
                    android:textSize="18sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:textColor="#000"
                    android:textAlignment="center"
                    android:text="Introducción a la metodología xp programación extrema"/>

                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="270dp"
                    android:layout_height="200dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/programacion_pareja"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cabin"
                    android:textSize="12sp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:textColor="#000000"
                    android:textAlignment="textStart"
                    android:text="@string/leccion1_1"/>

                <View android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:background="#6EC487" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cabin"
                    android:textSize="12sp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:textColor="#000000"
                    android:textAlignment="textStart"
                    android:text="@string/leccion1_2"/>

                <View android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:background="#6EC487" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cabin"
                    android:textSize="12sp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:textColor="#000000"
                    android:textAlignment="textStart"
                    android:text="@string/leccion1_3"/>

             </LinearLayout>
        </ScrollView>
    </LinearLayout>
</ScrollView>